[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.34"
async-graphql-axum = "3.0.34"
axum = "0.5.5"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"]}
tower-http = { version = "0.3.3", features = ["cors"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
ulid = { version = "0.5.0", features = ["serde"] }

